langtools/test/tools/javac/generics/6677785/T6677785.out
T6677785.java:31:23: compiler.err.cyclic.inheritance: E
1 error
